--- a/flash-learn/src/App.css
+++ b/flash-learn/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -15,11 +16,9 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  height: 100%;
+  width: 100%;
+  display: block;
   font-size: calc(10px + 2vmin);
   color: white;
 }
