--- a/flash-learn/src/components/HomePage/HomePage.css
+++ b/flash-learn/src/components/HomePage/HomePage.css
@@ -1,14 +1,66 @@
-style {
-  position: fixed;
-  bottom: 100;
-  display: inline;
+/* html, body, #root {
+  height: 100%;
+} */
+
+.container {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  height: 100vh;
+  text-align: center;
 }
 
-levels {
-  float: left;
-  color-scheme: "teal";
-  size: "lg";
+.button-container {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.button-container-row {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.english {
+  padding: 20px 40px;
+  font-size: 24px;
+  border: none;
+  border-radius: 10px;
+  color-scheme: teal;
+  background-color: teal;
+  color: white;
+  cursor: pointer;
+  width: 300px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+
+.science {
+  padding: 20px 40px;
+  font-size: 24px;
+  border: none;
+  border-radius: 10px;
+  color-scheme: teal;
+  background-color: teal;
+  color: white;
+  cursor: pointer;
+  width: 300px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+
+.maths {
+  padding: 20px 40px;
+  font-size: 24px;
+  border: none;
+  border-radius: 10px;
+  color-scheme: teal;
+  background-color: teal;
+  color: white;
+  cursor: pointer;
+  width: 300px;
+  text-align: center;
+  transition: background-color 0.3s ease;
 }
